# ext-cardano-utxorpc

./: Cargo.toml
.github/workflows/: build.yml
bootstrap/: main.tf  output.tf  variables.tf
bootstrap/cell/: main.tf  variables.tf
bootstrap/cloudflared/: deployment.tf  main.tf
bootstrap/configs/: cardano-mainnet.toml  cardano-preprod.toml  cardano-preview.toml  main.tf  mainnet.toml  preprod.toml  preview.toml  vector-testnet.toml
bootstrap/configs/vector-testnet/: alonzo.json  conway.json
bootstrap/crds/: main.tf
bootstrap/feature/: certs.tf  main.tf  operator.tf
bootstrap/instance/: main.tf  monitor.tf  sts.tf
bootstrap/proxy/: cert.tf  certs.tf  deployment.tf  main.tf  monitor.tf
bootstrap/services/: main.tf  output.tf
examples/: manifest.yaml
operator/src/: config.rs  controller.rs  utils.rs
proxy/: Cargo.toml  README.md
proxy/src/: auth.rs  config.rs  health.rs  main.rs  metrics.rs  proxy.rs  services.rs
snapshot-updater/: config.tf  cronjob.tf  dolos.toml.tftpl  main.tf  pvc.tf  script.sh.tftpl
