[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
operator = { path = "../operator" }

async-trait = "0.1.88"
bytes = "1.7.1"
dotenv = "0.15.0"
futures-util = "0.3.30"
miette = "7.6.0"
notify = "6.1.1"
prometheus = "0.13.3"
protoc-wkt = "1.0.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tonic = { version = "0.12.3", features = ["tls"] }
tonic-async-interceptor = "0.12.0"
tonic-reflection = { version = "0.12.3" }
tonic-web = { version = "0.12.3" }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tonic_prometheus_layer = "0.1.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utxorpc =  "0.10.0"
rocket = "0.5.1"
